# ai-ticket-classifier

./: .env.example  .gitignore  README.md  main.py  pyproject.toml
data/: tickets_jan_2026.csv  tickets_sinteticos.csv
scripts/: append_data_from_csv.py  check_data_quality.py  check_drift.py  create_database.py  prepare_and_train.py  prepare_and_train_with_mlflow.py
src/ai_ticket_classifier.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/ticket_ai/: schemas.py
src/ticket_ai/api/: main.py
src/ticket_ai/data/: loader.py  quality.py
src/ticket_ai/monitoring/: drift_monitoring.py
src/ticket_ai/pipelines/: train.py  train_with_mlflow.py
src/ticket_ai/services/: classifier.py  llm.py
tests/: test_api.py  test_classifier.py  test_data_quality.py
